--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,33 @@ notion_content.json
 credentials.json
 google_calendar_events.json
 token.json
+
+# Python
+__pycache__/
+*/__pycache__/*
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Python Testing
+.pytest_cache/
+.coverage
+htmlcov/
+tests/backend/__pycache__/
+tests/backend/__pycache__/*
