--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,6 @@
 [pytest]
 pythonpath = .
+# Exclude integration/manual test directories
+norecursedirs = */test_features *test_features test_features
+# Alternative: use --ignore patterns for specific directories
+addopts = --ignore=src/backend/test_features --ignore=test_features
