--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -43,16 +43,18 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
+    "d3": "7.9.0",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "geist": "^1.3.1",
+    "immutable": "5.1.3",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "14.2.25",
     "next-themes": "^0.4.6",
-    "react": "^19",
+    "react": "^18.3.1",
     "react-day-picker": "9.8.0",
-    "react-dom": "^19",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
@@ -61,18 +63,16 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
     "zod": "3.25.67",
-    "zustand": "5.0.8",
-    "d3": "7.9.0",
-    "immutable": "5.1.3"
+    "zustand": "5.0.8"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.9",
+    "@types/d3": "^7.4.3",
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/d3": "^7.4.3",
+    "eslint": "^9.36.0",
     "postcss": "^8.5",
-    "tailwindcss": "^4.1.9",
+    "tailwindcss": "^3.4.17",
     "tw-animate-css": "1.3.3",
     "typescript": "^5"
   }
