--- a/src/backend/.env.development
+++ b/src/backend/.env.development
@@ -10,7 +10,8 @@ CORS_ORIGINS=http://localhost:3000,http://localhost:3001,http://localhost:5173,h
 CORS_CREDENTIALS=false
 
 # Database
-DATABASE_URL=sqlite:///./smarthistory_dev.db
+DATABASE_URL=sqlite:///./smarthistory.db
+SMARTHISTORY_DB_PATH=./smarthistory.db
 DATABASE_ECHO=true
 
 # Logging
